<resources>
    <string name="app_name">Mulam_Register_Screen</string>
    <string name="register">REGISTER</string>
    <string name="your_manager">YOUR  MANAGER</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="_0301234567">0301234567</string>
    <string name="select_city">Select City</string>
    <string name="pre_production">PRE PRODUCTION</string>
    <string name="post_production">POST PRODUCTION</string>
    <string name="search">Search</string>
    <string name="also_search_for">Also Search for</string>
    <string name="addition">ADDITION</string>
    <string name="location">LOCATION</string>
    <string name="people_also_searching">People also searching</string>
    <string name="recently_viewed_more"><![CDATA[Recently Viewed & More]]></string>
    <string name="pakistani_showbiz_models">Pakistani ShowBiz Models</string>
</resources>