<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@drawable/bottom_corner"
        >
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:text="@string/register"
                android:letterSpacing="0.1"
                android:textColor="#FFB300"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:text="@string/your_manager"
                />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView

            android:layout_marginTop="20dp"
            android:id="@+id/profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/users_avatar"
            android:layout_gravity="center"
            app:civ_border_color="@color/white"
            app:civ_border_width="5dp"
            />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/profile_picture"
    android:textColor="#FFB300"
    android:layout_marginStart="20dp"
    android:layout_gravity="bottom"
    android:textSize="16dp"
    android:layout_marginBottom="10dp"

    >

</TextView>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:orientation="vertical"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            android:elevation="60dp"

            >
            <ImageView

                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/black_avatar"
                >
            </ImageView>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:singleLine="true"
                android:hint="@string/name"
                android:textCursorDrawable="@drawable/cursor_atribute"
                android:layout_marginStart="50dp"
                >
            </EditText>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"

            >

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                >

                <com.hbb20.CountryCodePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_autoDetectCountry="true"
                    android:padding="5dp"
                    app:ccp_textSize="15dp"
                    app:ccpDialog_keyboardAutoPopup="false"
                    >

                </com.hbb20.CountryCodePicker>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:elevation="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:paddingStart="20dp"
                    android:inputType="number"
                    android:textSize="17sp"
                    android:hint="@string/_0301234567">

                </EditText>



            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

            </androidx.cardview.widget.CardView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                android:elevation="60dp"

                >

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:hint="@string/select_city"
                    >
                </TextView>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <androidx.cardview.widget.CardView

                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="15dp"
                android:elevation="60dp"

                >
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="REGISTER"
                    android:background="#FFB300"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20dp"
                  >

              </TextView>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
</LinearLayout>

</LinearLayout>